# asus-helper

./: README.md  pyproject.toml
data/: 50-asus-helper.rules  org.asus-helper.policy
docs/: PRD.md  PROGRESS.md  TODO.md  WALKTHROUGH.md  asusctl-reference.md
scripts/: install-polkit.sh  install.sh
src/asus_helper/: __init__.py  __main__.py  app.py  config.py  kwin.py  logging.py  single_instance.py
src/asus_helper/bridges/: __init__.py  asusctl.py  base.py  nvidia_smi.py  ryzenadj.py  supergfxctl.py
src/asus_helper/ui/: __init__.py  main_window.py  tray_icon.py
systemd/: asus-helper.service
